<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:layout_width="126dp"
            android:layout_height="75dp"
            android:background="@drawable/ic_bicycle"
            android:backgroundTint="@color/colorPrimary"
            android:layout_alignParentStart="true"
            android:transitionName="imageapp"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:layout_width="126dp"
            android:layout_height="75dp"
            android:gravity="center"
            android:text="@string/title"
            android:fontFamily="cursive"
            android:layout_gravity="center"
            android:textSize="36sp"
            android:transitionName="textapp"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/textTitle"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:padding="5dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/helloTextLogin" />

            <TextView
                android:id="@+id/textView"
                android:padding="5dp"
                android:layout_marginBottom="30dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/signTextLogin" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username2layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailTextHint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/impeditTextPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/passwordTextHint"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textForgot"

                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="@color/colorPrimary"
                android:text="@string/textForgot" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="155dp"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/buttonLogin" />

            <TextView
                android:id="@+id/textNewUser"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/textNewUser" />

        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>